<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简历</string>
    <string name="myName">姓名：王轶</string>
    <string name="myAge">年龄：21</string>
    <string name="mySchool">学校：武汉大学</string>
    <string name="myHabit">爱好：乒乓球，阅读</string>
    <string name="myNature">性格：外向，开朗</string>
    <string name="desc">desc</string>
    <string name="myHint">查看详细请点击</string>
	<string name="drawer_open">open</string>
	<string name="drawer_close">close</string>
	<string name="school01">四川省绵竹中学</string>
	<string name="school02">武汉大学</string>
	<string name="school01_during">2008.08&#8211;2011.06</string>
	<string name="school02_institute">数学与统计学院</string>
	<string name="school02_department">信息与计算科学</string>
	<string name="school02_during">2011.09&#8211;2015.06</string>
	<string name="text_android">Android</string>
	<string name="text_client">客户端</string>
	<string name="text_develop">开发</string>
	<string name="text_student">实习生</string>
	<string name="faceImage_desc">我的照片</string>
	<string name="call">电话</string>
	<string name="message">短信</string>
	<string name="email">邮件</string>
	<string name="thanks">感谢您阅读完！</string>
	<string name="name">王轶-找实习的小生</string>
	<string name="phone_number">13163286397</string>
	<string name="email_address">yizhiw2@gmail.com</string>
	<string name="email.subject">关于实习</string>
	<string name="saveto">一键添加到联系人</string>
	<string name="qq_number">906590244</string>
	
	<string name="book01">Head first java</string>
	<string name="book02">Java编程思想</string>
	<string name="book03">Java核心技术</string>
	<string name="book04">Java开发实战\n1200例</string>
	<string name="book05">疯狂android\n讲义</string>
	<string name="book06">Android\n开发入门与实战</string>
	<string name="book07">Head first \n设计模式</string>
	<string name="book08">大话设计模式</string>
	<string name="book09">等</string>
</resources>
