<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
   	<TextView 
        android:id="@+id/text_thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:text="@string/thanks"
        android:textSize="24sp"
        />
   	<Button 
            android:id="@+id/call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
			android:gravity="center"
			android:background="@drawable/selector0"
            android:textSize="@dimen/content_text_size" 
            android:layout_above="@+id/message"
           	/>
    <Button 
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
           	android:gravity="center"
           	android:background="@drawable/selector1"
            android:textSize="@dimen/content_text_size"
            android:layout_above="@+id/email"
            />
     <Button 
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="center"
            android:background="@drawable/selector2"
            android:textSize="@dimen/content_text_size"
            android:layout_above="@+id/saveto"
            /> 
    	
     <Button 
            android:id="@+id/saveto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveto"
			android:gravity="center"
			android:background="@drawable/selector3"
            android:textSize="@dimen/content_text_size" 
            android:layout_alignParentBottom="true"
           	/>
      
    	
   

</RelativeLayout>
